# rag

./: .gitignore  main.py  pyproject.toml  streamlit_app.py
src/: logger.py  rough.ipynb
src/adapters/: llamaindex_utils.py
src/adapters/inbound/: ingestion.py  rest.py
src/adapters/outbound/: generator_openai.py  retriever_langchain.py  retriever_llamaindex.py  store_mongo.py
src/application/: prompt.py  rag_service.py
src/core/: base_vectordb.py
src/domain/: model.py  ports.py
